If user selects 'do not move/copy file', don't move/copy file

BUG: 424033
FIXED-IN: 0.10